recommended gap responsive fix

--- a/src/styles/blocks/recommended.scss
+++ b/src/styles/blocks/recommended.scss
@@ -15,6 +15,7 @@
     margin: 64px 120px 0;
 
     &__containter {
+      gap: 32px;
       grid-template-columns: 392px;
     }
   }
@@ -24,6 +25,7 @@
 
     &__containter {
       grid-template-columns: repeat(3, 324px);
+      gap: 24px;
     }
   }
 
